05-players/player07/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-player07
  labels:
     app: players
     site: campus Q4D
