05-players/player07/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-player07
  namespace: ns-player07
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:  
  rules:
    - host: player07.randco.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-player07
              port:
                number: 8080
